Moved definition for file offset bits into cmake.

--- a/source/cppfs/CMakeLists.txt
+++ b/source/cppfs/CMakeLists.txt
@@ -211,7 +211,7 @@ endif()
 
 target_compile_definitions(${target}
     PRIVATE
-
+    $<$<PLATFORM_ID:Linux>:_FILE_OFFSET_BITS=64>
     PUBLIC
     $<$<NOT:$<BOOL:${BUILD_SHARED_LIBS}>>:${target_id}_STATIC_DEFINE>
     ${DEFAULT_COMPILE_DEFINITIONS}
